# blnx

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: classify_local.sample.json  settings.json
docs/: Doc_Database_Design_Policy.md  Doc_Database_Layout.md  Note_BS_and_CF_for_Personal_Finance.md  Spec_Dneobank_Import.md  Spec_RakutenSec_Import.md  cash_flow_statement_guide.md  double_entry_bookkeeping_principles.md
examples/inbox/: enavi202601.csv  rb-sample.csv
py/: cli.py
py/ai/: llm_categorize.py  llm_router.py  (+3 more)
scripts/: lib_manual_category.py  manual_category_gui.py  run_ai_prediction.py  run_ai_training.py  run_analysis.py  run_balance_sheet.py  run_cashflow_statement.py  run_categorize.py  run_detect_subscriptions.py  run_household_dashboard.py  run_household_report.py  run_import.py  run_import_status.py  run_interactive_report.py  run_llm_categorize.py  run_manual_labeling.py  run_monthly_report.py  run_nlp_query.py  run_rebalance.py  run_replay.py  sync_manual_to_dictionary.py  update_exchange_rates.py  watch_sbi_sec.py
tests/: conftest.py  test_balance_sheet.py  test_box_table.py  test_classify_bank_income.py  test_detect_source.py  test_detect_source_ignored.py  test_exchange_rate_service.py  test_import_gate.py  test_import_rakutencard.py  test_import_resona_bank.py  test_import_sbi_holdings.py  test_import_sbi_jpy_deposit_withdrawal.py  test_import_sbi_normalize.py  test_import_sbi_trade_history.py  test_import_watermark.py  test_inbox_pipeline.py  test_raw_archive.py  test_replay.py  test_sync_manual_to_dictionary.py
(+35 files in other folders)
