[project]
name = "blnx"
version = "0.0.1"
description = "blnx — Japanese personal finance data pipeline: bank/card/brokerage CSV to a double-entry SQLite ledger"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "ydata-profiling>=4",
    "scikit-learn>=1.4",
    "sentence-transformers>=3",
    "joblib>=1.3",
    "streamlit>=1.32",
    "PyQt5>=5.15",
    "japanize-matplotlib>=1.1",
    "plotly>=5",
    "watchdog>=4",
]

[project.scripts]
blnx = "py.cli:main"

[dependency-groups]
dev = ["pytest>=9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
